--- a/index.html
+++ b/index.html
@@ -11,81 +11,10 @@
 	</style>
 </head>
 <body>
+	
 	<canvas id="canvas">Your browser not support.</canvas>
-	<script>
-		window.onload = init();
-		
-		function init(){
-			canvas = document.getElementById('canvas');
-			cw = canvas.width = 960;
-			ch = canvas.height = 600;
-			pen = canvas.getContext('2d');
+	<script src="js/game.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 
-			pen.beginPath();
-			pen.rect(10,10,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'lightgreen';
-			pen.rect(10,10,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'red';
-			pen.rect(cw - 110,490,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'black';
-			pen.rect(850,10,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'blue';
-			pen.rect(10,490,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'pink';
-			pen.rect(cw/2 - 50, ch/2 - 50,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'yellow';
-			pen.rect(10, ch/2 - 50,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'purple';
-			pen.rect(cw/2 - 50,10,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'magenta';
-			pen.rect(850,ch/2 - 50,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'brown';
-			pen.rect(cw/2 - 50,ch - 110,100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'orange';
-			pen.rect(cw/4 - (50/2),ch/4 - (50/2),100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'lightblue';
-			pen.rect(cw/2 + cw/4 - 75 + (100/4), ch/4 - (50/2),100,100);
-			pen.fill();
-
-			pen.beginPath();
-			pen.fillStyle = 'lightgreen';
-			pen.rect(220,370,100,100);
-			pen.fill();
-		}
-		// console.log('Javascript Active');
-	</script>
 </body>
 </html>
